# redditnetwork

./: .env.example  .gitignore  pyproject.toml
docs/backlog/: rate_limiting.md
docs/design/: evaluation.md  security_evaluation.md  technical_design.md
docs/dogfood/: rag_1sdcv73_after.json
src/reddit_network/: __init__.py  aggregator.py  api.py  app.py  cli.py  config.py  llm_filter.py  pipeline.py  ranker.py  reddit_client.py
tests/: conftest.py  test_rate_limit_live.py
tests/unit/: test_aggregator.py  test_config.py  test_llm_filter.py  test_ranker.py
